--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="15dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/_16ssp"
+        android:textColor="@color/white"
         app:cornerRadius="20dp"
         android:fontFamily="@font/sf_pro_rounded_regular"
         app:layout_constraintBottom_toBottomOf="parent"
