--- a/app/src/main/res/layout/fab_previous_page.xml
+++ b/app/src/main/res/layout/fab_previous_page.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/_50sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    android:background="@color/white"
+    android:backgroundTint="@color/white"
     app:cardCornerRadius="@dimen/_100sdp">
 
     <ImageView
