--- a/app/src/main/res/layout/fragment_budget_input.xml
+++ b/app/src/main/res/layout/fragment_budget_input.xml
@@ -17,13 +17,26 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Pick a budget for your dating place"
+            android:text="What's your \n Budget?"
             android:textSize="@dimen/_35ssp"
             android:textColor="@color/textTitle"
             android:textStyle="bold"
             android:textAlignment="center"
             android:layout_marginBottom="@dimen/_20sdp"
             android:fontFamily="@font/sf_pro_rounded_regular" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="can select multiple budget"
+            android:textStyle="bold"
+            android:textSize="@dimen/_16ssp"
+            android:textAlignment="center"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:textColor="@color/textSubTitle"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:fontFamily="@font/sf_pro_rounded_regular" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,6 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="$"
+                    android:background="@color/white"
                     android:textSize="@dimen/_30ssp"
                     android:textColor="@color/indicatioractive"
                     android:fontFamily="@font/sf_pro_rounded_regular"
@@ -61,6 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="$$"
+                    android:background="@color/white"
                     android:textSize="@dimen/_30ssp"
                     android:textColor="@color/indicatioractive"
                     android:fontFamily="@font/sf_pro_rounded_regular"
@@ -80,6 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="$$$"
+                    android:background="@color/white"
                     android:textSize="@dimen/_30ssp"
                     android:textColor="@color/indicatioractive"
                     android:fontFamily="@font/sf_pro_rounded_regular"
