--- a/app/src/main/res/layout/fragment_ethnicity_input.xml
+++ b/app/src/main/res/layout/fragment_ethnicity_input.xml
@@ -1,31 +1,291 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/login_background"
+    android:orientation="vertical"
     tools:context=".views.registration.EthnicityInputFragment">
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:text="What is your \n ethnicity?"
+        android:textSize="@dimen/_35ssp"
+        android:textColor="@color/textTitle"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:layout_marginTop="@dimen/_50sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp">
-        <TextView
+        android:fontFamily="@font/sf_pro_rounded_regular" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Can select multiple ethnicity"
+        android:textStyle="bold"
+        android:textSize="@dimen/_16ssp"
+        android:textAlignment="center"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:textColor="@color/textSubTitle"
+        android:fontFamily="@font/sf_pro_rounded_regular" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="What is your ethnicity?"
-            android:textSize="@dimen/_35ssp"
-            android:textColor="@color/textTitle"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:layout_marginBottom="@dimen/_25sdp"
-            android:fontFamily="@font/sf_pro_rounded_regular" />
-        <include
-            layout="@layout/layout_recyclerview"
-            android:id="@+id/recyclerview" />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_10sdp">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_south_asian"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_south_asian"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="South Asian"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_east_asian"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_east_asian"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="East Asian"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_10sdp">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_african_american"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_african_american"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="African American"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_black"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_black"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Black"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_10sdp">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_latinx"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_latinx"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Latinx"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_pacific_islander"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_pacific_islander"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Pacific Islander"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_10sdp">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_american_indian"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_american_indian"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="American Indian"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_hispanic"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_hispanic"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Hispanic"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_white"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_white"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="White"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/button_others"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:cardCornerRadius="@dimen/_50sdp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_margin="@dimen/_5sdp">
+                    <TextView
+                        android:id="@+id/text_male"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Others"
+                        android:background="@color/white"
+                        android:fontFamily="@font/sf_pro_rounded_regular"
+                        android:textColor="@color/indicatioractive"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_16ssp"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:paddingBottom="@dimen/_10sdp" />
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
-</FrameLayout>
+</LinearLayout>
