--- a/app/src/main/res/layout/fragment_gender_preference_input.xml
+++ b/app/src/main/res/layout/fragment_gender_preference_input.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Who do you want to date?"
+            android:text="Who do you \n want to date?"
             android:textSize="@dimen/_35ssp"
             android:textColor="@color/textTitle"
             android:textStyle="bold"
@@ -40,10 +40,10 @@
                 android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/indicatioractive"
                 android:textAlignment="center"
-                android:textSize="@dimen/_15ssp"
+                android:textSize="@dimen/_16ssp"
                 android:paddingTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_10sdp"
-                />
+                android:background="@color/white" />
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:id="@+id/button_male"
@@ -61,9 +61,10 @@
                 android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/indicatioractive"
                 android:textAlignment="center"
-                android:textSize="@dimen/_15ssp"
+                android:textSize="@dimen/_16ssp"
                 android:paddingTop="@dimen/_10sdp"
-                android:paddingBottom="@dimen/_10sdp" />
+                android:paddingBottom="@dimen/_10sdp"
+                android:background="@color/white"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:id="@+id/button_open_to_all"
@@ -81,9 +82,10 @@
                 android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/indicatioractive"
                 android:textAlignment="center"
-                android:textSize="@dimen/_15ssp"
+                android:textSize="@dimen/_16ssp"
                 android:paddingTop="@dimen/_10sdp"
-                android:paddingBottom="@dimen/_10sdp"/>
+                android:paddingBottom="@dimen/_10sdp"
+                android:background="@color/white"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
