--- a/app/src/main/res/layout/fragment_height_input.xml
+++ b/app/src/main/res/layout/fragment_height_input.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="What is your height?"
+            android:text="What is your \n height?"
             android:textSize="@dimen/_35ssp"
             android:textColor="@color/textTitle"
             android:textStyle="bold"
@@ -35,7 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_10sdp"
-                android:gravity="center">
+                android:gravity="center"
+                android:background="@color/white">
                 <com.shawnlin.numberpicker.NumberPicker
                     android:id="@+id/number_picker_feet"
                     android:layout_width="wrap_content"
