--- a/app/src/main/res/layout/fragment_location_input.xml
+++ b/app/src/main/res/layout/fragment_location_input.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Where do you live?"
+            android:text="Where do you \n live?"
             android:textSize="@dimen/_35ssp"
             android:textColor="@color/textTitle"
             android:textStyle="bold"
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="Your location"
             android:textStyle="bold"
-            android:textSize="@dimen/_15ssp"
+            android:textSize="@dimen/_16ssp"
             android:textColor="@color/textSubTitle"
             android:layout_marginStart="@dimen/_10sdp"
             android:fontFamily="@font/sf_pro_rounded_regular" />
@@ -42,12 +42,13 @@
                 android:id="@+id/text_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_15ssp"
+                android:textSize="@dimen/_16ssp"
+                android:textColor="@color/black"
                 android:fontFamily="@font/sf_pro_rounded_regular"
                 android:paddingTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_10sdp"
                 android:paddingStart="@dimen/_10sdp"
-                android:background="@null"
+                android:background="@color/white"
                 android:drawablePadding="@dimen/_5sdp"
                 app:drawableStartCompat="@drawable/ic_location_24" />
         </androidx.cardview.widget.CardView>
