--- a/app/src/main/res/layout/fragment_phone_input.xml
+++ b/app/src/main/res/layout/fragment_phone_input.xml
@@ -29,26 +29,31 @@
             android:layout_height="wrap_content"
             android:text="Phone number"
             android:textStyle="bold"
-            android:textSize="@dimen/_15ssp"
+            android:textSize="@dimen/_16ssp"
             android:textColor="@color/textSubTitle"
-            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_20sdp"
             android:fontFamily="@font/sf_pro_rounded_regular" />
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="@dimen/_50sdp"
+            app:cardBackgroundColor="@color/white"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp">
             <EditText
                 android:id="@+id/text_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="000-000-0000"
-                android:textSize="@dimen/_15ssp"
+                android:textSize="@dimen/_16ssp"
                 android:fontFamily="@font/sf_pro_rounded_regular"
                 android:paddingTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_10sdp"
-                android:paddingStart="@dimen/_10sdp"
-                android:background="@null"/>
+                android:paddingStart="@dimen/_15sdp"
+                android:background="@null"
+                android:textColor="@color/black"
+                android:textColorHint="@color/textTertiary"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 </FrameLayout>
