--- a/app/src/main/res/layout/fragment_vaccine_input.xml
+++ b/app/src/main/res/layout/fragment_vaccine_input.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Do you have Covid-19 vaccine?"
+            android:text="Do you have \n Covid-19 vaccine?"
             android:textSize="@dimen/_35ssp"
             android:textColor="@color/textTitle"
             android:textStyle="bold"
@@ -39,10 +39,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Yes"
+                android:background="@color/white"
                 android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/indicatioractive"
                 android:textAlignment="center"
-                android:textSize="@dimen/_15ssp"
+                android:textSize="@dimen/_16ssp"
                 android:paddingTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_10sdp" />
         </androidx.cardview.widget.CardView>
@@ -60,11 +61,12 @@
                 android:id="@+id/text_no"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:text="No"
                 android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/indicatioractive"
                 android:textAlignment="center"
-                android:textSize="@dimen/_15ssp"
+                android:textSize="@dimen/_16ssp"
                 android:paddingTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_10sdp"
                 />
