EthnicityInputFragment - selecting multiple ethnicity and storing them onPause()

--- a/app/src/main/res/layout/fragment_ethnicity_input.xml
+++ b/app/src/main/res/layout/fragment_ethnicity_input.xml
@@ -272,7 +272,7 @@
                     android:focusable="true"
                     android:layout_margin="@dimen/_5sdp">
                     <TextView
-                        android:id="@+id/text_male"
+                        android:id="@+id/text_others"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Others"
