--- a/app/src/main/res/layout/fragment_location_input.xml
+++ b/app/src/main/res/layout/fragment_location_input.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="@dimen/_50sdp"
-            android:layout_marginBottom="@dimen/_10sdp">
+            android:layout_marginBottom="@dimen/_25sdp">
             <TextView
                 android:id="@+id/text_location"
                 android:layout_width="match_parent"
@@ -52,6 +52,40 @@
                 android:drawablePadding="@dimen/_5sdp"
                 app:drawableStartCompat="@drawable/ic_location_24" />
         </androidx.cardview.widget.CardView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.gms.maps.MapView
+                android:id="@+id/map_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/button_get_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="40dp"
+                app:cardCornerRadius="@dimen/_50sdp"
+                android:visibility="visible"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:layout_centerInParent="true"
+                android:clickable="true"
+                android:focusable="true">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Use my current location"
+                    android:fontFamily="@font/sf_pro_rounded_regular"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/_16ssp"
+                    android:paddingTop="@dimen/_10sdp"
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:background="@drawable/button_background_gradient_dark"/>
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
     </LinearLayout>
 
 </FrameLayout>
